# baealex

./: .gitemoji  .gitignore  README.md  control.py  goorm.manifest  main.py  models.py  sketch_190610e.pde  views.py
.github/workflows/: blog-post-workflow.yml  youtube-video-workflow.yml
Algorithm/: binary_gap.py
Algorithm/acmicpc.net/: 01330-두-수-비교하기.py  01406-에디터.py  01929-소수-구하기.py  02440-별-찍기-3.c  02741-N-찍기.py  05543-상근날드.rs  07287-등록.cpp  1000-A+B.c  10171-고양이.cpp  10430-나머지.cpp  10815-숫자-카드.py  10869-사칙연산.cpp  10871-X보다-작은-수.cs  10998-AxB.cs  (+19 more)
Backjoon/: 1000-A+B.c  10171-고양이.cpp  10872.cpp  10950-A+B-3.cs  10951-A+B-4.py  10952-A+B-5.py  1110-더하기-사이클.cpp  11720-숫자의-합.cpp  1546.cpp  15921.cpp  15965-K번째-소수.py  16462.cpp  16506.cpp  16738-초특가-숭놀자.py  16738.py  2558-A+B-2.cs  4344.cpp  5339.cpp  9316.cpp
C#/: 2019-05-15.md
CPP/: length.cpp  split.c
Genetic/: genetic-basic-fill-bag-1.py  genetic-basic-js.html  genetic-basic.py
HTML/: category.html
Language/Rust/hello-rocket/: Cargo.toml
Language/Rust/hello-rocket/templates/: base.html.tera
Processing Version/: main.py  models.py
Project/: README.md
Python/: black_jack.py  filewatch.py
Qt Version/: config.py  main.py  views.py
TIL/: 2019-03-13-image processing.md  2019-04-10-image processing.md  2019-04-17-Jump to python.py  2019-04-17-image processing.md  2019-05-18-TensorFlow.md
Unity/: DinamicCreateObject.cs  ObjectControl.cs  SocketClient.cs
etc/: baealex.code-workspace
models/: function.py  infomaion.py  infomation.py
sketch_190610e/: sketch_190610e.pde
tiny-projects/: README.md
(+956 files in other folders)
